WIP: Mapping to User domain and basic classes for domain assertions

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -19,3 +19,16 @@ email.reset.title=jhipsterMinimal password reset
 email.reset.greeting=Dear {0}
 email.reset.text1=For your jhipsterMinimal account a password reset was requested, please click on the URL below to reset it:
 email.reset.text2=Regards,
+
+# Standard Error Messages
+user.bad-request=The values you entered are incorrect.
+server.internal-server-error=An error occurred, our team is working on it!
+server.mandatory-null=An error occurred, a mandatory field ({{ field }}) was null in our system. Our team is working to fix it!
+server.mandatory-empty=An error occurred, a mandatory field ({{ field }}) was empty in our system. Our team is working to fix it!
+server.mandatory-blank=An error occurred, a mandatory field ({{ field }}) was blank in our system. Our team is working to fix it!
+server.string-too-long=An error occurred. "{{ field }}" content must be under {{ maxLength }} characters (but was {{ currentLength }}). Our team is working to fix it!
+server.string-too-short=An error occurred. "{{ field }}" content must be at least {{ minLength }} characters (but was {{ currentLength }}). Our team is working to fix it!
+server.value-over-max=An error occurred. The value of "{{ field }}" must be under {{ max }} (but was {{ value }}. Our team is working to fix it!
+server.value-under-min=An error occurred. The value of "{{ field }}" must be under {{ min }} (but was {{ value }}. Our team is working to fix it!
+server.invalid-regex=An error occurred. The regex "{{ regex }}" is not valid. Our team is working to fix it!
+server.invalid-format=An error occurred. The format of "{{ value }}" in the field "{{ field }}" is not correct (expected format is "{{ regex }}"). Our team is working to fix it!
